--- a/.spectrwm.conf
+++ b/.spectrwm.conf
@@ -31,20 +31,28 @@ disable_border		= 1
 
 # Bar Settings
 bar_enabled		= 1
-# bar_enabled_ws[1]	= 1
-# bar_border_width	= 1
-# bar_border[1]		= rgb:00/80/80
-# bar_border_unfocus[1]	= rgb:00/40/40
-# bar_color[1]		= black
-# bar_color_selected[1]	= rgb:00/80/80
-# bar_font_color[1]	= rgb:a0/a0/a0
-# bar_font_color_selected	= black
-bar_font		= xos4 Terminus:pixelsize=14:antialias=true
+bar_action_expand       = 1
+bar_enabled	        	= 1
+bar_border_width	    = 1
+bar_border[1]	    	= rgb:28/2a/36
+bar_border_unfocus[1]	= rgb:28/2a/36
+bar_color[1]	    	= rgb:28/2a/36, rgb:00/80/80
+bar_color_selected[1]	= rgb:00/80/80
+bar_delay               = 5
+bar_font_color_selected	= black
+bar_font			        = xos4 Terminus:pixelsize=14:antialias=true, NotoSans Nerd Font:size=9:style=Regular:antialias=true
+bar_font_color[1] rgb:bb/c5/ff, rgb:e1/ac/ff, rgb:dd/ff/a7, rgb:ff/8b/92, rgb:ff/e5/85, rgb:89/dd/ff
+workspace_indicator= listall,markcurrent,markurgent,markactive,markempty,noindexes
+workspace_mark_current +@fn=1;+@fg=3;+@fg=0;+@fn=0;
+workspace_mark_active +@fn=1;+@fg=2;+@fg=0;+@fn=0;
+workspace_mark_empty +@fn=1;+@fg=1;+@fg=0;+@fn=0;
+workspace_mark_urgent +@fn=1;+@fg=1;+@fg=0;+@fn=0;
 # bar_font_pua		= Typicons:pixelsize=14:antialias=true
-# bar_action		= ~/.config/spectrwm/baraction.sh
-# bar_action_expand	= 0
+ bar_action		= ~/.local/bin/baraction.sh
+bar_action_expand	= 1
 # bar_justify		= left
-# bar_format		= +N:+I +S <+M> 
+# bar_format		    	= +N:+I +S <+D>+4<%a %b %d %R %Z %Y+8<+A+4<+V
+bar_format	        		= +|L+<+S+<+F+<+L+2<+<>+M<+<+|R+A %a, %b %d %R:%S
 # workspace_indicator	= listcurrent,listactive,markcurrent,printnames
 # bar_at_bottom		= 1
 stack_enabled		= 1
@@ -137,7 +145,7 @@ bind[volup]			= XF86AudioRaiseVolume
 bind[mute]			= XF86AudioMute
 bind[voldown]		= XF86AudioLowerVolume
 bind[display]		= MOD+F3
-
+bind[float_toggle]	= MOD+f
 
 # program[initscr]	= initscreen.sh			# optional
 
